--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </style>
 </head>
     <body>
-		<audio src="http://sc1.111ttt.cn/2015/1/12/06/105061243161.mp3" autoplay="autoplay" loop="true"></audio>
+		<audio src="http://up_mp4.t57.cn/2015/1/12m/06/105061243161.m4a" autoplay="autoplay" loop="true"></audio>
         <div id="main">
             <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌或者火狐浏览器，或者其他游览器的最新版本。</div>
             <div id="wrap">
